package creditpb

func (x *CreditState) SetID(id string) {
	x.XId = id
}

func (x *CreditState) GetID() string {
	return x.XId
}

func (x *CreditRecharge) SetID(id string) {
	x.XId = id
}

func (x *CreditRecharge) GetID() string {
	return x.XId
}

func (x *CreditChange) SetID(id string) {
	x.XId = id
}

func (x *CreditChange) GetID() string {
	return x.XId
}
